--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,103 +10,24 @@
     <section class="content-container-2">
         <!-- Content Outline Here based off page needs -->
         <p class="expansion">Map of the Globe</p>
-        <a href="/views/pages/map"></a><img src="/images/map-image.png" class="photo-image" alt="Image of a United States map with pins in it">
+        <a href="/views/pages/map"></a><img src="/img/map-image.png" class="photo-image" alt="Image of a United States map with pins in it">
     </section>
     <section class="content-container-2">
         <!-- Content Outline Here based off page needs -->
         <p class="expansion">Photo Gallery</p>
-        <a href="/views/pages/photogallery"></a><img src="/images/photo-gallery.jpeg" class="photo-image" alt="A picture of a scrapbook titled 'My Adventure Book'.">
+        <a href="/views/pages/photogallery"></a><img src="/img/photo-gallery.jpeg" class="photo-image" alt="A picture of a scrapbook titled 'My Adventure Book'.">
     </section>
     <section class="content-container-2">
         <!-- Content Outline Here based off page needs -->
         <p class="expansion">Video Showcase of Practitioners</p>
-        <a href="/views/pages/videogallery"></a><img src="./images/comeout_videos_image.webp" class="photo-image" alt="There is a stock image of the Youtube icon in rainbow colors superimposed on the 'Progress Pride Flag.'">
+        <a href="/views/pages/videogallery"></a><img src="./img/comeout_videos_image.webp" class="photo-image" alt="There is a stock image of the Youtube icon in rainbow colors superimposed on the 'Progress Pride Flag.'">
     </section>
     <section class="content-container-2">
         <!-- Content Outline Here based off page needs -->
         <p class="expansion">Contact Us</p>
-        <a href="/views/pages/contactus"></a><img src="/images/contact-us.jpeg" class= "photo-image" alt="On a black chalkboard, there is a depiction of an envelope, a phone and the at symbol over the word 'Contact Us', near a hand with chalk in the person's fingertips.">
+        <a href="/views/pages/contactus"></a><img src="/img/contact-us.jpeg" class= "photo-image" alt="On a black chalkboard, there is a depiction of an envelope, a phone and the at symbol over the word 'Contact Us', near a hand with chalk in the person's fingertips.">
     </section>
 </div>
 <!-- Insert footer.ejs -->
 <%- include('../partials/footer') -%> 
-<footer class = "footer"> 
-    <section class = "bottom-row"> 
-        <div class = "border"> 
-            <div>
-                <h2 class = "mini-container">Developer Contact Info</h2>
-                <p class ="center-text-paragraph">A Product of CodeSquad</p>
-                <ul class="center-text-line-items link-styling">
-                    <li><a href="http://codesquad.org" target="'_blank"><img src="/images/CodeSquad-website-logo.png" alt="CodeSquad.org Logo"></a></li>
-                    <li><a href="/">
-                        <i class="fa-brands fa-facebook-square"></i>
-                    </a></li>
-                    <li><a href="/">
-                        <i class="fa-brands fa-instagram-square"></i>
-                    </a></li>
-                    <li><a href="/">
-                        <i class="fa-brands fa-twitter"></i>
-                    </a></li>
-                    <li>Developer: Kit Fenrir Amreik (they/she)</li>
-                    <li>Email: kitdamreik@gmail.com</li>
-                </ul>
-            </div>
-            <div>
-                <h2 class = "mini-container">Learn More About Class Structure</h2>
-                <p>["Creativity is intelligence having fun- Albert Einstein"]</p>
-                <p class="center-text-paragraph">
-                    <ul class="center-text-line-items">
-                        <li>What Does A Semester Look Like?</li>
-                        <br>
-                        <li>The Class Structure and Learning Flow</li>
-                        <br>
-                        <li>What Is The Impact After A Year Of Classes?</li>
-                        <!-- After more development -->
-                         <!-- F. Procceds: instructor payment/direct reparations opp.-->
-                    </ul>
-                </p>
-            </div>
-            <div class="link-styling">
-                <h2 class = "mini-container">Call to Action</h2>
-                <p class="center-text-paragraph">
-                    <ul class="center-text-line-items">
-                        <li>Donate Here</li>
-                        <br>
-                        <li>Collaborate & Capacity Build</li>
-                        <br>
-                        <li>Book a Practitioner</li>
-                    </ul>
-                </p>
-            </div>
-            <div class="foot-bar">
-                <h2 class = "mini-container">Talk to Us :]</h2>
-                <form action="/">
-                    <legend>
-                        <fieldset>
-                            <label for="First and Last Name">First and Last Name:</label>
-                            <input type="text" name="First and Last Name" id="First and Last Name" placeholder="First and Last Name">
-                        </fieldset>
-                        <!-- <br> -->
-                        <fieldset>
-                            <label for="Email">Email Address</label>
-                            <input type="Email" name="Email" id="Email" placeholder="Email Address">
-                        </fieldset>
-                        <!-- <br> -->
-                        <fieldset>
-                            <label for="Phone">Phone Number</label>
-                            <input type="number" name="Phone" id="Phone" placeholder="Phone Number">
-                        </fieldset>
-                        <!-- <br> -->
-                        <section class= "center-button">
-                            <input type="Submit" class="yellow-button" value="Submit">
-                        </section>
-                    </legend>   
-                    <!-- After more development -->
-                        <!-- JS: console log and display in the browser as a confirmation/alert? -->
-                        <!-- Button and styling -->
-            </div>
-        </div>
-    </section>
-</footer>
-</body>
-</html>
+
