--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/032df15d1f.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="./styles/styles.css">
-    <script defer src="./scripts/scripts.js"></script>
+    <link href="/css/styles.css" rel="stylesheet" />
+   <script src="/js/scripts.js"></script>
 </head>
 <body>
