Back End Sprint 5/2-5/3

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -9,7 +9,7 @@
     <!-- Content Outline Here based off page needs -->
     </section>
     <section class="content-container-2">
-        <form action="/">
+        <form action="/" method="POST" type="text">
             <legend>
                 <fieldset>
                     <label for="Email">Email Address</label>
