--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -48,7 +48,7 @@
             </div>
             <div class="foot-bar">
                 <h2 class = "mini-container">Talk to Us :]</h2>
-                <form action="/">
+                <form action="/" method="POST" type="text">
                     <legend>
                         <fieldset>
                             <label for="First and Last Name">First and Last Name:</label>
