notes from Sonia/mix up of CSS/JS files oopeth

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -10,6 +10,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/032df15d1f.js" crossorigin="anonymous"></script>
     <link href="/css/styles.css" rel="stylesheet" />
-   <script src="/js/scripts.js"></script>
+   <script defer src="/js/scripts.js"></script>
 </head>
 <body>
