--- a/styles/styles.css
+++ b/styles/styles.css
@@ -55,6 +55,14 @@ body {
     color: var(--electric-blue);
 };
 
+.vivid-sky-blue-text {
+    color: var(--vivid-sky-blue);
+}
+
+.hot-pink-text {
+    color: var(--hot-pink);
+}
+
 .grad {
     height: auto;
     background-color: var(--blue-munsell , --electric-blue);
@@ -99,7 +107,12 @@ header {
 .link-styling a:active {
     color: var(--cosmic-latte);
     background-color: var(--hot-pink);
-    font-weight: bold;} 
+    font-weight: bold;
+} 
+
+.bold {
+    font-weight: bold;
+}
 
 .content-container {
     margin: 60px;
@@ -187,6 +200,10 @@ h2, p {
 
 .expansion {
     font-size: 1.8rem;
+}
+
+.minor-expansion {
+    font-size: 1.3rem;
 }
 
 /* for card headers */
@@ -435,6 +452,18 @@ a.menu {
     background-color: var(--hot-pink);
 }
 
+.naples-yellow {
+    background-color: var(--naples-yellow);
+}
+
+
+.light-steel-blue {
+    background-color: var(--light-steel-blue);
+}
+
+.cosmic-latte {
+    background-color: var(--cosmic-latte);
+}
 
 /* .cornflower-blue {
     background-color: var(--cornflower--blue);
