admin configuration/TJ Quiz easter egg/footer and nav for admin

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -29,8 +29,6 @@
                         <li>The Class Structure and Learning Flow</li>
                         <br>
                         <li>What Is The Impact After A Year Of Classes?</li>
-                        <!-- After more development -->
-                         <!-- F. Procceds: instructor payment/direct reparations opp.-->
                     </ul>
                 </p>
             </div>
@@ -48,30 +46,29 @@
             </div>
             <div class="foot-bar">
                 <h2 class = "mini-container">Talk to Us :]</h2>
-                <form action="/" method="POST" type="text">
+                <form action="../pages/index" method="POST" type="text">
                     <legend>
+                            <p> Note: Responses will be stored and sent out to Practitioners </p>
+                            <p> Please wait up to 72 hours for follow up. Thank you :] </p>  
+                    </legend>
+                        <br>
                         <fieldset>
                             <label for="First and Last Name">First and Last Name:</label>
                             <input type="text" name="First and Last Name" id="First and Last Name" placeholder="First and Last Name">
                         </fieldset>
-                        <!-- <br> -->
                         <fieldset>
                             <label for="Email">Email Address</label>
                             <input type="Email" name="Email" id="Email" placeholder="Email Address">
                         </fieldset>
-                        <!-- <br> -->
                         <fieldset>
                             <label for="Phone">Phone Number</label>
                             <input type="number" name="Phone" id="Phone" placeholder="Phone Number">
                         </fieldset>
-                        <!-- <br> -->
                         <section class= "center-button">
-                            <input type="Submit" class="yellow-button" value="Submit">
+                            <a href="../pages/index">
+                                <input type="Submit" class="yellow-button" value="Submit" /></a>
                         </section>
-                    </legend>   
-                    <!-- After more development -->
-                        <!-- JS: console log and display in the browser as a confirmation/alert? -->
-                        <!-- Button and styling -->
+                </form>
             </div>
         </div>
     </section>
