--- a/views/pages/contactus.ejs
+++ b/views/pages/contactus.ejs
@@ -8,17 +8,15 @@
     <h1>Contact Us Page</h1>
     </section>
     <section class = "content-container-2">
-        <a href="/views/pages/contactus"></a><img src="/img/contact-us.jpeg" class= "photo-image" alt="On a black chalkboard, there is a depiction of an envelope, a phone and the at symbol over the word 'Contact Us', near a hand with chalk in the person's fingertips.">
+        <a href="./contactus"></a><img src="/img/contact-us.jpeg" class= "photo-image" alt="On a black chalkboard, there is a depiction of an envelope, a phone and the at symbol over the word 'Contact Us', near a hand with chalk in the person's fingertips.">
         <div class="content-container-3">
             <p>Hello</p>
         </div>
     </section>
     <h2 class = "content-container-section title-tinker">Schedule Meeting with a Practitioner :]</h2>
     <section class="content-container-2 side-scroll-mobile">
-        <!-- try CSS grid/ add flexbox? -->
-        <!-- 5/2: cohort links for website/social media/ LinkedIn -->
         <div class="card mint">
-            <a href="/"></a><img src="/img/KIT.jpeg" class="template" alt="a picture of Kit, a Black woman smiling with a Black dress and flowers of varying colors, with a red rose in their right ear">
+            <a href="./contactus"></a><img src="/img/KIT.jpeg" class="template" alt="a picture of Kit, a Black woman smiling with a Black dress and flowers of varying colors, with a red rose in their right ear">
             <div class="card-container">
                 <h3><b>Kit Fenrir Amreik (they/she)</b></h3> 
                 <br>
@@ -28,7 +26,7 @@
             </div>
         </div>
         <div class="card vivid-sky-blue">
-            <a href="/"></a><img src="/img/YESI.jpeg" class="template" alt="a picture of Yesinia JJ, a Black person with a pink afro and clear framed glasses looks at the camera">
+            <a href="./contactus"></a><img src="/img/YESI.jpeg" class="template" alt="a picture of Yesinia JJ, a Black person with a pink afro and clear framed glasses looks at the camera">
             <div class="card-container">
                 <h3><b>Yesinia JJ (she/her)</b></h3> 
                 <br>
@@ -38,7 +36,7 @@
             </div>
         </div>
         <div class="card gold-crayola">
-            <a href="/"></a><img src="/img/KRIS.jpg" class="template" alt="a picture of Kristopher JT Toma-Lee, a 35 y/o genderqueer trans guy from Massachusetts. They are holding their phone, wearing a black undershirt and a green and blue shirt.">
+            <a href="./contactus"></a><img src="/img/KRIS.jpg" class="template" alt="a picture of Kristopher JT Toma-Lee, a 35 y/o genderqueer trans guy from Massachusetts. They are holding their phone, wearing a black undershirt and a green and blue shirt.">
             <div class="card-container">
                 <h3><b>Kristopher JT Toma-Lee (they/he)</b></h3> 
                 <br>
@@ -48,7 +46,7 @@
             </div>
         </div>
         <div class="card medium-purple">
-            <a href="/"></a><img src="/img/CHELSEA.JPEG" class="template" alt="a picture of Chelsea Colby, a White person against a grey background, wearing a blue sweater, and smiling with leopard print glasses.">
+            <a href="./contactus"></a><img src="/img/CHELSEA.JPEG" class="template" alt="a picture of Chelsea Colby, a White person against a grey background, wearing a blue sweater, and smiling with leopard print glasses.">
             <div class="card-container">
                 <h3><b>Chelsea Colby (she/they)</b></h3> 
                 <br>
@@ -58,7 +56,7 @@
             </div>
         </div>
         <div class="card orchid-crayola">
-            <a href="/"></a><img src="/img/CORI.jpeg" class="template" alt="a picture of Cori Falco, a White person with makeup on against a beach background, smiling with a light blue floral top">
+            <a href="./contactus"></a><img src="/img/CORI.jpeg" class="template" alt="a picture of Cori Falco, a White person with makeup on against a beach background, smiling with a light blue floral top">
             <div class="card-container">
                 <h3><b>Cori Falco (she/her)</b></h3> 
                 <br>
@@ -68,7 +66,7 @@
             </div>
         </div>
         <div class="card mint">
-            <a href="/"></a><img src="/img/RACHEL.JPG" class="template" alt="a picture of Rachel Freed Sussman, a White person smiling and snuggled in a blanket against a beach background">
+            <a href="./contactus"></a><img src="/img/RACHEL.JPG" class="template" alt="a picture of Rachel Freed Sussman, a White person smiling and snuggled in a blanket against a beach background">
             <div class="card-container">
                 <h3><b>Rachel Freed Sussman (any pronoun)</b></h3> 
                 <br>
@@ -78,7 +76,7 @@
             </div>
         </div>
         <div class="card vivid-sky-blue">
-            <a href="/"></a><img src="/img/THERESA.jpg" class="template" alt="a picture of Theresa Yannetty, a White person smiling with light makeup coupled with a stuffed animal in a chair">
+            <a href="./contactus"></a><img src="/img/THERESA.jpg" class="template" alt="a picture of Theresa Yannetty, a White person smiling with light makeup coupled with a stuffed animal in a chair">
             <div class="card-container">
                 <h3><b>Theresa Yannetty (she/her)</b></h3> 
                 <br>
@@ -88,7 +86,7 @@
             </div>
         </div>
         <div class="card gold-crayola">
-            <a href="/"></a><img src="/img/TIM.jpg" class="template" alt="a picture of Timothy Scott Crumley, a White person smiling with a blue shirt, crosslegged against a neutral background">
+            <a href="./contactus"></a><img src="/img/TIM.jpg" class="template" alt="a picture of Timothy Scott Crumley, a White person smiling with a blue shirt, crosslegged against a neutral background">
             <div class="card-container">
                 <h3><b>Timothy Scott Crumley (he/him)</b></h3> 
                 <br>
