--- a/views/partials/admin-nav.ejs
+++ b/views/partials/admin-nav.ejs
@@ -1,14 +1,15 @@
 <header>
     <div class="header-wrapper">
         <div class = "link-styling mobile-container">
-            <a href="/"><img src ="/images/Cookie-logo.png" alt="A picture of an animal, with a cat-like smiling face with a turtle's body is the logo of this website."></a>
+            <a href="/"><img src ="public/images/Cookie-logo.png" alt="A picture of an animal, with a cat-like smiling face with a turtle's body is the logo of this website."></a>
             </a>
         </div>
         <nav class="nav-bar link-styling open-sesame"> 
             <ul class="nav-bar-list left-text-line-items">
                 <li><a href="/">Index</a></li>
-                <li><a href="/videogallery">About</a></li>
                 <li><a href="/login">Login</a></li>
+                <li><a href="/admin">Admin</a>
+                </li>
             </ul>
         </nav>
         <div class = "link-styling mobile-container">
