updated back end to mimic front end

--- a/views/pages/map.ejs
+++ b/views/pages/map.ejs
@@ -8,10 +8,9 @@
         <h1>Map Page</h1>
     </section>
     <section class="content-container-2">
-        <a href="/views/pages/map"></a><img src="/images/map-image.png" class="photo-image" alt="Image of a United States map with pins in it">
+        <a href="/map"><img src="/img/map-image.png" class="photo-image" alt="Image of a United States map with pins in it"></a>
     </section>
     <section class="content-container-2">
-        <!-- Content Outline Here based off page needs -->
         <h3 class="center-text-paragraph">The Primary Practicum Projects</h3>
         <p> This section will expand more upon the premise of the PPP, as well as the region the students cover/live in. </p>
     </section>
