--- a/views/pages/videogallery.ejs
+++ b/views/pages/videogallery.ejs
@@ -6,10 +6,9 @@
 <div class="content-container">
     <section class="content-container-section">
     <h1>Video Showcase of Practitioners</h1>
-    <!-- Content Outline Here based off page needs -->
     </section>
     <section class="content-container-2">
-        <a href="/views/pages/videogallery"></a><img src="./images/comeout_videos_image.webp" class="photo-image" alt="There is a stock image of the Youtube icon in rainbow colors superimposed on the 'Progress Pride Flag.'">
+        <a href="/videogallery"></a><img src="./img/comeout_videos_image.webp" class="photo-image" alt="There is a stock image of the Youtube icon in rainbow colors superimposed on the 'Progress Pride Flag.'">
     </section>
     <section class="content-container-2">
         <p>This is a potential summary/synopsis about the video being showcased here. There may be a transcript provided. In addition, there may be other pertinent information here.
