--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,7 +5,7 @@
                 <h2 class = "mini-container">Developer Contact Info</h2>
                 <p class ="center-text-paragraph">A Product of CodeSquad</p>
                 <ul class="center-text-line-items link-styling">
-                    <li><a href="http://codesquad.org" target="'_blank"><img src="/images/CodeSquad-website-logo.png" alt="CodeSquad.org Logo"></a></li>
+                    <li><a href="http://codesquad.org" target="'_blank"><img src="/img/CodeSquad-website-logo.png" alt="CodeSquad.org Logo"></a></li>
                     <li><a href="/">
                         <i class="fa-brands fa-facebook-square"></i>
                     </a></li>
@@ -23,7 +23,7 @@
                 <h2 class = "mini-container">Learn More About Class Structure</h2>
                 <p>["Creativity is intelligence having fun- Albert Einstein"]</p>
                 <p class="center-text-paragraph">
-                    <ul class="center-text-line-items">
+                    <ul class="left-text-line-items">
                         <li>What Does A Semester Look Like?</li>
                         <br>
                         <li>The Class Structure and Learning Flow</li>
@@ -35,18 +35,18 @@
             <div class="link-styling">
                 <h2 class = "mini-container">Call to Action</h2>
                 <p class="center-text-paragraph">
-                    <ul class="center-text-line-items">
+                    <ul class="left-text-line-items">
                         <li>Donate Here</li>
                         <br>
                         <li>Collaborate & Capacity Build</li>
                         <br>
-                        <li>Book a Practitioner</li>
+                        <a href="https://forms.gle/MM3iLK5XpDLrWnk59">Book a Practitioner</a>
                     </ul>
                 </p>
             </div>
             <div class="foot-bar">
                 <h2 class = "mini-container">Talk to Us :]</h2>
-                <form action="../pages/index" method="POST" type="text">
+                <form action="/" method="POST" type="text">
                     <legend>
                             <p> Note: Responses will be stored and sent out to Practitioners </p>
                             <p> Please wait up to 72 hours for follow up. Thank you :] </p>  
@@ -65,7 +65,7 @@
                             <input type="number" name="Phone" id="Phone" placeholder="Phone Number">
                         </fieldset>
                         <section class= "center-button">
-                            <a href="../pages/index">
+                            <a href="pages/admin">
                                 <input type="Submit" class="yellow-button" value="Submit" /></a>
                         </section>
                 </form>
