--- a/views/pages/contactus.ejs
+++ b/views/pages/contactus.ejs
@@ -10,87 +10,98 @@
     <section class = "content-container-2">
         <a href="./contactus"></a><img src="/img/contact-us.jpeg" class= "photo-image" alt="On a black chalkboard, there is a depiction of an envelope, a phone and the at symbol over the word 'Contact Us', near a hand with chalk in the person's fingertips.">
         <div class="content-container-3">
-            <p>Hello</p>
+            <p>Hello, you've reached our contact page!</p>
+            <p>Please see our parameters of outreach and let's coordinate a meeting!</p>
+            <p>If you need immediate assistance, please see the</p>
+            <p>"Book a Practitioner" Link in the bottom of the document.</p>
         </div>
     </section>
     <h2 class = "content-container-section title-tinker">Schedule Meeting with a Practitioner :]</h2>
     <section class="content-container-2 side-scroll-mobile">
         <div class="card mint">
-            <a href="./contactus"></a><img src="/img/KIT.jpeg" class="template" alt="a picture of Kit, a Black woman smiling with a Black dress and flowers of varying colors, with a red rose in their right ear">
+            <a href="./contactus"><img src="/img/KIT.jpeg" class="template" alt="a picture of Kit, a Black woman smiling with a Black dress and flowers of varying colors, with a red rose in their right ear"></a>
             <div class="card-container">
                 <h3><b>Kit Fenrir Amreik (they/she)</b></h3> 
                 <br>
-                    <p> Email: kitdamreik@gmail.com</p> 
+                    <p> Email: kitdamreik
+                        @gmail.com</p> 
                     <p> Phone: [###-###-####] </p>
                     <p> Best Time to Reach: anytime from 12pm-9pm EST </p>  
             </div>
         </div>
         <div class="card vivid-sky-blue">
-            <a href="./contactus"></a><img src="/img/YESI.jpeg" class="template" alt="a picture of Yesinia JJ, a Black person with a pink afro and clear framed glasses looks at the camera">
+            <a href="./contactus"><img src="/img/YESI.jpeg" class="template" alt="a picture of Yesinia JJ, a Black person with a pink afro and clear framed glasses looks at the camera"></a>
             <div class="card-container">
                 <h3><b>Yesinia JJ (she/her)</b></h3> 
                 <br>
-                    <p> Email: name@gmail.com</p> 
+                    <p> Email: name
+                        @gmail.com</p> 
                     <p> Phone: [###-###-####] </p>
                     <p> Best Time to Reach: anytime from [timeframe] EST </p>   
             </div>
         </div>
         <div class="card gold-crayola">
-            <a href="./contactus"></a><img src="/img/KRIS.jpg" class="template" alt="a picture of Kristopher JT Toma-Lee, a 35 y/o genderqueer trans guy from Massachusetts. They are holding their phone, wearing a black undershirt and a green and blue shirt.">
+            <a href="./contactus"><img src="/img/KRIS.jpg" class="template" alt="a picture of Kristopher JT Toma-Lee, a 35 y/o genderqueer trans guy from Massachusetts. They are holding their phone, wearing a black undershirt and a green and blue shirt."></a>
             <div class="card-container">
                 <h3><b>Kristopher JT Toma-Lee (they/he)</b></h3> 
                 <br>
-                    <p> Email: name@gmail.com</p> 
+                    <p> Email: name
+                        @gmail.com</p> 
                     <p> Phone: [###-###-####] </p>
                     <p> Best Time to Reach: anytime from [timeframe] EST </p>  
             </div>
         </div>
         <div class="card medium-purple">
-            <a href="./contactus"></a><img src="/img/CHELSEA.JPEG" class="template" alt="a picture of Chelsea Colby, a White person against a grey background, wearing a blue sweater, and smiling with leopard print glasses.">
+            <a href="./contactus"><img src="/img/CHELSEA.JPEG" class="template" alt="a picture of Chelsea Colby, a White person against a grey background, wearing a blue sweater, and smiling with leopard print glasses."></a>
             <div class="card-container">
                 <h3><b>Chelsea Colby (she/they)</b></h3> 
                 <br>
-                    <p> Email: name@gmail.com</p> 
+                    <p> Email: chelsea23lynn
+                        @gmail.com</p> 
                     <p> Phone: [###-###-####] </p>
-                    <p> Best Time to Reach: anytime from [timeframe] EST </p>  
+                    <p> Best Time to Reach: depends on the time of year TBH but I'd say generally 3 PM - 6 PM </p>  
             </div>
         </div>
         <div class="card orchid-crayola">
-            <a href="./contactus"></a><img src="/img/CORI.jpeg" class="template" alt="a picture of Cori Falco, a White person with makeup on against a beach background, smiling with a light blue floral top">
+            <a href="https://www.linkedin.com/in/cori-falco-5b8887a5/"><img src="/img/CORI.jpeg" class="template" alt="a picture of Cori Falco, a White person with makeup on against a beach background, smiling with a light blue floral top"></a>
             <div class="card-container">
                 <h3><b>Cori Falco (she/her)</b></h3> 
                 <br>
-                    <p> Email: name@gmail.com</p> 
+                    <p> Email: corifalco
+                        @gmail.com</p> 
                     <p> Phone: [###-###-####] </p>
-                    <p> Best Time to Reach: anytime from [timeframe] EST </p>  
+                    <p> Best Time to Reach: general availability - evenings after 6 pm EST </p>  
             </div>
         </div>
         <div class="card mint">
-            <a href="./contactus"></a><img src="/img/RACHEL.JPG" class="template" alt="a picture of Rachel Freed Sussman, a White person smiling and snuggled in a blanket against a beach background">
-            <div class="card-container">
+            <a href="./contactus"><img src="/img/RACHEL.JPG" class="template" alt="a picture of Rachel Freed Sussman, a White person smiling and snuggled in a blanket against a beach background">
+            <div class="card-container"></a>
                 <h3><b>Rachel Freed Sussman (any pronoun)</b></h3> 
                 <br>
-                    <p> Email: name@gmail.com</p> 
+                    <p> Email: rachelsussman
+                        114@gmail.com</p> 
                     <p> Phone: [###-###-####] </p>
-                    <p> Best Time to Reach: anytime from [timeframe] EST </p>  
+                    <p> Best Time to Reach: Please email!</p>  
             </div>
         </div>
         <div class="card vivid-sky-blue">
-            <a href="./contactus"></a><img src="/img/THERESA.jpg" class="template" alt="a picture of Theresa Yannetty, a White person smiling with light makeup coupled with a stuffed animal in a chair">
-            <div class="card-container">
+            <a href="https://www.linkedin.com/in/theresa-yannetty-1a799944/"><img src="/img/THERESA.jpg" class="template" alt="a picture of Theresa Yannetty, a White person smiling with light makeup coupled with a stuffed animal in a chair">
+            <div class="card-container"></a>
                 <h3><b>Theresa Yannetty (she/her)</b></h3> 
                 <br>
-                    <p> Email: name@gmail.com</p> 
+                    <p> Email: tyannetty
+                        @gmail.com</p> 
                     <p> Phone: [###-###-####] </p>
-                    <p> Best Time to Reach: anytime from [timeframe] EST </p>  
+                    <p> Best Time to Reach: Between 9 and noon, then 2 and 5, EST </p>  
             </div>
         </div>
         <div class="card gold-crayola">
-            <a href="./contactus"></a><img src="/img/TIM.jpg" class="template" alt="a picture of Timothy Scott Crumley, a White person smiling with a blue shirt, crosslegged against a neutral background">
+            <a href="./contactus"><img src="/img/TIM.jpg" class="template" alt="a picture of Timothy Scott Crumley, a White person smiling with a blue shirt, crosslegged against a neutral background"></a>
             <div class="card-container">
                 <h3><b>Timothy Scott Crumley (he/him)</b></h3> 
                 <br>
-                    <p> Email: name@gmail.com</p> 
+                    <p> Email: name
+                        @gmail.com</p> 
                     <p> Phone: [###-###-####] </p>
                     <p> Best Time to Reach: anytime from [timeframe] EST </p>  
             </div>
