--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -6,19 +6,18 @@
 <div class="content-container">
     <section class="content-container-section">
     <h1>Login Page</h1>
-    <!-- Content Outline Here based off page needs -->
     </section>
     <section class="content-container-2">
         <form action="/" method="POST" type="text">
             <legend>
                 <fieldset>
                     <label for="Email">Email Address</label>
-                    <input type="Email" name="Email" id="Email" placeholder="Email">
+                    <input type="Email" name="Email" id="Email" placeholder="Email" minlength="10" required />
                 </fieldset>
                 <br>
                 <fieldset>
                     <label for="Password">Password</label>
-                    <input type="Password" name="Password" id="Password" placeholder="Password">
+                    <input type="Password" name="Password" id="Password" placeholder="Password" minlength="6" required />
                 </fieldset>
                 <br>
                 <section class= "center-button">
