--- a/views/partials/admin-nav.ejs
+++ b/views/partials/admin-nav.ejs
@@ -1,7 +1,7 @@
 <header>
     <div class="header-wrapper">
         <div class = "link-styling mobile-container">
-            <a href="/"><img src ="public/images/Cookie-logo.png" alt="A picture of an animal, with a cat-like smiling face with a turtle's body is the logo of this website."></a>
+            <a href="/"><img src ="/img/Cookie-logo.png" alt="A picture of an animal, with a cat-like smiling face with a turtle's body is the logo of this website."></a>
             </a>
         </div>
         <nav class="nav-bar link-styling open-sesame"> 
