--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,7 @@
 <header>
     <div class="header-wrapper">
         <div class = "link-styling mobile-container">
-            <a href="/"><img src ="/images/Cookie-logo.png" alt="A picture of an animal, with a cat-like smiling face with a turtle's body is the logo of this website."></a>
+            <a href="/"><img src ="/img/Cookie-logo.png" alt="A picture of an animal, with a cat-like smiling face with a turtle's body is the logo of this website."></a>
             </a>
         </div>
         <nav class="nav-bar link-styling open-sesame"> 
@@ -9,6 +9,7 @@
                 <li><a href="/">Index</a></li>
                 <li><a href="/videogallery">About</a></li>
                 <li><a href="/login">Login</a></li>
+                <li><a href="/tj-quiz">TJ Quiz</a></li>
             </ul>
         </nav>
         <div class = "link-styling mobile-container">
