--- a/views/pages/contactus.ejs
+++ b/views/pages/contactus.ejs
@@ -19,7 +19,7 @@
     <h2 class = "content-container-section title-tinker">Schedule Meeting with a Practitioner :]</h2>
     <section class="content-container-2 side-scroll-mobile">
         <div class="card mint">
-            <a href="./contactus"><img src="/img/KIT.jpeg" class="template" alt="a picture of Kit, a Black woman smiling with a Black dress and flowers of varying colors, with a red rose in their right ear"></a>
+            <a href="https://www.linkedin.com/in/kit-amreik/"><img src="/img/KIT.jpeg" class="template" alt="a picture of Kit, a Black woman smiling with a Black dress and flowers of varying colors, with a red rose in their right ear"></a>
             <div class="card-container">
                 <h3><b>Kit Fenrir Amreik (they/she)</b></h3> 
                 <br>
