--- a/views/pages/contactus.ejs
+++ b/views/pages/contactus.ejs
@@ -13,13 +13,13 @@
             <p>Hello, you've reached our contact page!</p>
             <p>Please see our parameters of outreach and let's coordinate a meeting!</p>
             <p>If you need immediate assistance, please see the</p>
-            <p>"Book a Practitioner" Link in the bottom of the document.</p>
+            <p>"Book a Practitioner" Link in the bottom of the document to book Kit.</p>
         </div>
     </section>
     <h2 class = "content-container-section title-tinker">Schedule Meeting with a Practitioner :]</h2>
     <section class="content-container-2 side-scroll-mobile">
         <div class="card mint">
-            <a href="https://www.linkedin.com/in/kit-amreik/"><img src="/img/KIT.jpeg" class="template" alt="a picture of Kit, a Black woman smiling with a Black dress and flowers of varying colors, with a red rose in their right ear"></a>
+            <a href="https://calendly.com/kit-tj-services"><img src="/img/KIT.jpeg" class="template" alt="a picture of Kit, a Black woman smiling with a Black dress and flowers of varying colors, with a red rose in their right ear"></a>
             <div class="card-container">
                 <h3><b>Kit Fenrir Amreik (they/she)</b></h3> 
                 <br>
