--- a/views/pages/createlog.ejs
+++ b/views/pages/createlog.ejs
@@ -10,7 +10,7 @@
     </section>
     <section class="content-container-2"> 
         <div class="content-container-3 card mint">
-            <form action="./admin" method="POST">
+            <form action="admin" method="POST">
                 <legend>
                     <p> Note: This page is to create a new log after a client has reached out. </p>
                     <p> In addition, you can create a new log if it was deleted by mistake. </p>
