--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -32,13 +32,15 @@
                     </ul>
                 </p>
             </div>
-            <div class="link-styling">
+            <div class="link-styling link-styling-footer">
                 <h2 class = "mini-container">Call to Action</h2>
                 <p class="center-text-paragraph">
                     <ul class="left-text-line-items">
-                        <li>Donate Here</li>
+                        <a href="https://linktr.ee/millennialmadhatteroftime">Donate Here</a>
                         <br>
-                        <li>Collaborate & Capacity Build</li>
+                        <br>
+                        <a href="https://rebelcauseinc.org/">Collaborate & Capacity Build</a>
+                        <br>
                         <br>
                         <a href="https://forms.gle/MM3iLK5XpDLrWnk59">Book a Practitioner</a>
                     </ul>
@@ -54,18 +56,18 @@
                         <br>
                         <fieldset>
                             <label for="First and Last Name">First and Last Name:</label>
-                            <input type="text" name="First and Last Name" id="First and Last Name" placeholder="First and Last Name">
+                            <input type="text" name="First and Last Name" id="First and Last Name" placeholder="First and Last Name" minlength="6" required/>
                         </fieldset>
                         <fieldset>
                             <label for="Email">Email Address</label>
-                            <input type="Email" name="Email" id="Email" placeholder="Email Address">
+                            <input type="Email" name="Email" id="Email" placeholder="Email Address" minlength="10" required/>
                         </fieldset>
                         <fieldset>
                             <label for="Phone">Phone Number</label>
-                            <input type="number" name="Phone" id="Phone" placeholder="Phone Number">
+                            <input type="number" name="Phone" id="Phone" placeholder="Phone Number" minlength="10" required/>
                         </fieldset>
                         <section class= "center-button">
-                            <a href="pages/admin">
+                            <a href="./admin">
                                 <input type="Submit" class="yellow-button" value="Submit" /></a>
                         </section>
                 </form>
