--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -32,6 +32,7 @@ body {
     --heliotrope-gray:#023B58;
     /* New Colors 4-27 */
     --cornflower--blue: #89A1EF;
+--emerald: #44CF6C;
     
     /* to enclose content */
     --light-steel-blue: #B8CDF8;
@@ -121,8 +122,6 @@ header {
     background-color: var(--hot-pink);
     font-weight: bold;
 } 
-
-
 
 .bold {
     font-weight: bold;
@@ -247,10 +246,6 @@ h3 {
     text-align: right;
     padding-right: 5%;
 } 
-
-.word-wrap {
-    word-wrap: break-word;
-}
 
 footer {
     background-color: var(--hot-pink);
@@ -445,9 +440,7 @@ a.menu {
     transition: 0.3s;
     width: 60%;
     max-width: 300px;
-    padding: 7.5%;
-    padding-left: 7%;
-    padding-right: 7%;
+    padding: 2.5%;
     border-radius: 5px;
     align-content: center;
     display: flex;
@@ -458,6 +451,10 @@ a.menu {
 /* Card Colors */
 .mint {
     background-color: var(--magic-mint);
+}
+
+.emerald {
+    background-color: var(--emerald);
 }
 
 .vivid-sky-blue {
