--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class = "footer"> 
+<footer class = "footer link-styling-footer"> 
     <section class = "bottom-row"> 
         <div class = "border"> 
             <div>
@@ -6,14 +6,14 @@
                 <p class ="center-text-paragraph">A Product of CodeSquad</p>
                 <ul class="center-text-line-items link-styling">
                     <li><a href="http://codesquad.org" target="'_blank"><img src="/img/CodeSquad-website-logo.png" alt="CodeSquad.org Logo"></a></li>
-                    <li><a href="/">
-                        <i class="fa-brands fa-facebook-square"></i>
+                    <li><a href="https://github.com/Kitamreik">
+                        <i class="fa-brands fa-github-alt"></i>
                     </a></li>
-                    <li><a href="/">
+                    <li><a href="https://www.instagram.com/millennialmadhatteroftime/">
                         <i class="fa-brands fa-instagram-square"></i>
                     </a></li>
-                    <li><a href="/">
-                        <i class="fa-brands fa-twitter"></i>
+                    <li><a href="https://www.linkedin.com/in/kit-amreik/">
+                        <i class="fa-brands fa-linkedin"></i>
                     </a></li>
                     <li>Developer: Kit Fenrir Amreik (they/she)</li>
                     <li>Email: kitdamreik@gmail.com</li>
@@ -23,27 +23,30 @@
                 <h2 class = "mini-container">Learn More About Class Structure</h2>
                 <p>["Creativity is intelligence having fun- Albert Einstein"]</p>
                 <p class="center-text-paragraph">
-                    <ul class="left-text-line-items">
-                        <li>What Does A Semester Look Like?</li>
+                    <div class="left-text-line-items link-styling">
+                        <a href="https://drive.google.com/file/d/1F7Sz3FpdzJBCOThbBafvoep5-TJe4bAa/view?usp=sharing">What Does A Semester Look Like?</a>
                         <br>
-                        <li>The Class Structure and Learning Flow</li>
                         <br>
-                        <li>What Is The Impact After A Year Of Classes?</li>
-                    </ul>
+                        <a href="https://drive.google.com/file/d/1EkPoyHAEbcaJmcYXwtWDKBALR7MQsAVe/view?usp=sharing">The Class Structure and Learning Flow</a>
+                        <br>
+                        <br>
+                        <a href="https://drive.google.com/file/d/17W76TYyAHockF7H3ODf9ud2MWL_0QjV4/view?usp=sharing">What Is The Impact After A Year Of Classes?</a>
+    
+                    </div>
                 </p>
             </div>
             <div class="link-styling link-styling-footer">
                 <h2 class = "mini-container">Call to Action</h2>
                 <p class="center-text-paragraph">
-                    <ul class="left-text-line-items">
+                    <div class="left-text-line-items">
                         <a href="https://linktr.ee/millennialmadhatteroftime">Donate Here</a>
                         <br>
                         <br>
-                        <a href="https://rebelcauseinc.org/">Collaborate & Capacity Build</a>
+                        <a href="https://calendly.com/kit-tj-services">Collaborate & Capacity Build</a>
                         <br>
                         <br>
-                        <a href="https://forms.gle/MM3iLK5XpDLrWnk59">Book a Practitioner</a>
-                    </ul>
+                        <a href="https://forms.gle/EudpBs4ijHbRsWfr9">Book a Practitioner</a>
+                    </div>
                 </p>
             </div>
             <div class="foot-bar">
