--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -1,11 +1,11 @@
 <%- include('../partials/head') -%> 
 <!-- Insert header.ejs -->
-    <title>Login</title>
+    <title>Register</title>
 <%- include('../partials/nav') -%> 
 <!-- Insert nav.ejs -->
 <div class="content-container">
     <section class="content-container-section">
-    <h1>Login Page</h1>
+    <h1>Register Page</h1>
     </section>
     <section class="content-container-2">
         <form action="/" method="post">
@@ -26,7 +26,7 @@
                 <br>
                 <section class= "center-button">
                     <button class="yellow-button link-styling">
-                        <a href="/auth/google" role="button">Sign In with Google</a>
+                        <a href="/auth/google" role="button">SignUp with Google</a>
                     </button>
                 </section>
             </legend>
