--- a/views/pages/videogallery.ejs
+++ b/views/pages/videogallery.ejs
@@ -7,12 +7,12 @@
     <section class="content-container-section">
     <h1>Video Showcase of Practitioners</h1>
     </section>
-    <section class="content-container-2">
-        <a href="/videogallery"></a><img src="./img/comeout_videos_image.webp" class="photo-image" alt="There is a stock image of the Youtube icon in rainbow colors superimposed on the 'Progress Pride Flag.'">
-    </section>
-    <section class="content-container-2">
-        <p>This is a potential summary/synopsis about the video being showcased here. There may be a transcript provided. In addition, there may be other pertinent information here.
-        </p>
+    <section class="content-container-2 link-styling">
+        <iframe width="475" height="315" src="https://drive.google.com/file/d/1FyVyZLNNosNciejJWw0DuXtgfVjbTnfF/preview" width="640" height="480" allow="autoplay"></iframe>
+        <div class="content-container-3">
+            <p>This is an introduction from Kit Fenrir Amreik (they/she), in a conversation with Miriam Levy (she/her), linked to: <a href="https://www.unitycircles.org/">Unity Circles</a> and the Transformative Justice Practitioner Program, discussing how their Transformative Justice journey took place, embodiment of said values, radically envisioning support, some advice for those whom are watching and how TJ created shifts in her life, to this day.
+            </p>
+        </div>
     </section>
 </div>
 <!-- Insert footer.ejs -->
